crates/cli/tests/snapshots/archive_snapshots__archive_success.snap
---
source: crates/cli/tests/archive_snapshots.rs
expression: "pretty(&String::from_utf8(out.stdout).unwrap())"
---
{
  "data": {
    "archivePath": ".speclink/changes/archive/2026-05-19-demo",
    "archivedAt": "<TIMESTAMP>",
    "changeId": "demo",
    "dryRun": false,
    "specSync": {
      "capabilitiesSynced": [
        {
          "addedCount": 1,
          "capability": "auth",
          "createdMainSpec": true,
          "mainSpecPath": ".speclink/specs/auth/spec.md",
          "modifiedCount": 0,
          "removedCount": 0,
          "renamedCount": 0
        }
      ]
    },
    "state": "archived"
  },
  "error": null,
  "ok": true,
  "requestId": "req_00000000000000000000000000000000",
  "warnings": []
}
